--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_testnet"
+        android:id="@+id/action_stagenet"
         android:checkable="true"
         android:orderInCategory="100"
-        android:title="@string/menu_testnet"
+        android:title="@string/menu_stagenet"
         app:showAsAction="never" />
 
     <item
