1.remove Jacksum 2.code clean 3.add hint for nfc backup

--- a/app/src/main/res/layout/fragment_input_nfc_password.xml
+++ b/app/src/main/res/layout/fragment_input_nfc_password.xml
@@ -30,6 +30,13 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        style="@style/MoneroLabel.Heading.Donation"
+        android:layout_width="match_parent"
+        android:textAllCaps="false"
+        android:layout_height="wrap_content"
+        android:text="@string/input_nfc_password_hint" />
+
     <ImageView
         android:id="@+id/NfcAnimation"
         android:layout_width="match_parent"
