Inform user the progress or result of opening wallet

--- a/app/src/main/res/layout/prompt_password.xml
+++ b/app/src/main/res/layout/prompt_password.xml
@@ -23,12 +23,10 @@
     </android.support.design.widget.TextInputLayout>
 
     <TextView
-        android:id="@+id/txtFingerprintAuth"
+        android:id="@+id/tvOpenPrompt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="10dp"
-        android:drawableStart="@drawable/ic_fingerprint"
         android:gravity="center_vertical"
-        android:text="@string/prompt_fingerprint_auth"
         android:visibility="gone" />
 </LinearLayout>
