Use coinmarketcap for exchange rates (#3)

--- a/app/src/main/res/values-nb/about.xml
+++ b/app/src/main/res/values-nb/about.xml
@@ -30,11 +30,10 @@
         in encrypted form.
         </p>
         <p>Other personal data is not collected by the app.</p>
-        <p>If you use the USD/EUR exchange (optional) functionality, monerujo fetches the exchange
-        rate through the public API of kraken.com.
-        See their privacy policy at https://www.kraken.com/legal/privacy for
-        details on how data in your requests is collected (especially the
-        section "Information We Collect Automatically").</p>
+        <p>If you use the exchange (optional) functionality, monerujo fetches the exchange
+        rate through the public API of coinmarketcap.com.
+        See their privacy policy at https://coinmarketcap.com/privacy for
+        details on how data in your requests is collected.</p>
         <h2>App Permissions</h2>
         <ul>
         <li>INTERNET : Connect to the Monero Network via a Monero Daemon Node</li>
