--- a/app/src/main/res/values-zh-rTW/about.xml
+++ b/app/src/main/res/values-zh-rTW/about.xml
@@ -22,9 +22,9 @@
         <p>Monerujo 只會在本地端使用您的 Monero 金鑰以及公開地址執行必要的處理，並在加密後發送至
         Monero 網路進行交易。</p>
         <p>其餘的個人資料都不會被 monerujo 收集。</p>
-        <p>倘若您有使用 USD/EUR 匯兌的功能(可選用)，monerujo 將透過 kraken.com 的公開
-        API 抓取目前的匯率。若欲了解您要求的資料會如何被收集及使用，請至 https://www.kraken.com/legal/privacy
-        觀看他們的隱私權政策，特別是「Information We Collect Automatically」章節。</p>
+        <p>倘若您有使用匯兌的功能(可選用)，monerujo 將透過 coinmarketcap.com 的公開
+        API 抓取目前的匯率。若欲了解您要求的資料會如何被收集及使用，請至 https://coinmarketcap.com/privacy
+        觀看他們的隱私權政策。</p>
         <h2>應用程式權限</h2>
         <ul>
         <li>INTERNET : 透過 Monero 節點連接至 Monero 網路。</li>
