--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="tx_pending">@color/moneroFab</color>
     <color name="tx_failed">@color/moneroBlack</color>
 
-    <color name="gradientOrange">#FF39d9fd</color>
-    <color name="gradientPink">#FF1059c6</color>
+    <color name="gradientOrange">#FF1059c6</color>
+    <color name="gradientPink">#FF39d9fd</color>
 
     <color name="trafficGray">#9B9B9B</color>
 
@@ -24,9 +24,9 @@
     <color name="moneroText">#FF616161</color>
 
 
-    <color name="colorPrimaryDark">@color/gradientPink</color>
+    <color name="colorPrimaryDark">@color/gradientOrange</color>
     <!--color name="colorAccent">#009ADA</color-->
-    <color name="colorAccent">@color/gradientPink</color>
+    <color name="colorAccent">@color/gradientOrange</color>
 
     <color name="white">#ffffff</color>
 </resources>
