--- a/app/src/main/res/drawable/gradient_oval.xml
+++ b/app/src/main/res/drawable/gradient_oval.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
     <gradient
         android:angle="45"
-        android:endColor="@color/gradientOrange"
-        android:startColor="@color/gradientPink"
+        android:endColor="@color/gradientPink"
+        android:startColor="@color/gradientOrange"
         android:type="linear" />
 </shape>
