--- a/app/src/main/res/layout/view_exchange.xml
+++ b/app/src/main/res/layout/view_exchange.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="LinearLayout"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="LinearLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,12 +12,16 @@
 
         <Spinner
             android:id="@+id/sCurrencyA"
-            android:layout_width="64dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:entries="@array/currency"
             android:gravity="center"
-            android:textAlignment="center" />
+            android:minWidth="72dp"
+            android:paddingBottom="8dp"
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp"
+            android:paddingTop="8dp" />
 
         <com.m2049r.aeonwallet.widget.CTextInputLayout
             android:id="@+id/etAmount"
@@ -49,12 +53,15 @@
         <Spinner
             android:id="@+id/sCurrencyB"
             style="@style/MoneroSpinnerGray"
-            android:layout_width="64sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:entries="@array/currency"
             android:gravity="center"
+            android:minWidth="72dp"
             android:paddingBottom="8dp"
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp"
             android:paddingTop="8dp"
             android:textAlignment="center" />
 
