--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -57,6 +57,7 @@
                 android:layout_marginStart="8dp"
                 android:entries="@array/currency"
                 android:gravity="center"
+                android:minWidth="80dp"
                 android:paddingBottom="2dp"
                 android:paddingEnd="4dp"
                 android:paddingStart="4dp"
