--- a/app/src/main/res/menu/wallet_menu.xml
+++ b/app/src/main/res/menu/wallet_menu.xml
@@ -17,6 +17,13 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_rename"
+        android:icon="@drawable/ic_edit_white_24dp"
+        android:orderInCategory="100"
+        android:title="@string/menu_rename"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_help_wallet"
         android:icon="@drawable/ic_help_white_24dp"
         android:orderInCategory="200"
