remove mixin settings

--- a/app/src/main/res/layout/fragment_send_settings.xml
+++ b/app/src/main/res/layout/fragment_send_settings.xml
@@ -28,19 +28,9 @@
             android:textAlignment="textEnd" />
 
         <Spinner
-            android:id="@+id/sMixin"
-            style="@style/MoneroSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_weight="1"
-            android:entries="@array/mixin"
-            android:textAlignment="center" />
-
-        <Spinner
             android:id="@+id/sPriority"
             style="@style/MoneroSpinner"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:entries="@array/priority"
