new subaddress bump effect

--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -25,6 +25,7 @@
             android:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/llAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
