--- a/app/src/main/res/values-ru/about.xml
+++ b/app/src/main/res/values-ru/about.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_title">О программе</string>
     <string name="about_close">Закрыть</string>
     <string name="about_whoami">Я monerujo</string>
     <string name="about_version">Версия %1$s (%2$d)</string>
@@ -15,10 +14,11 @@
         ]]></string>
 
     <string name="privacy_policy"><![CDATA[
-        <h1>Данная страница содержит информацию, касающуюся нашей политики по сбору,
+        <h1>Политика конфиденциальности</h1>
+        <p>Данная страница содержит информацию, касающуюся нашей политики по сбору,
 		использованию и раскрытию ваших личных данных, которые мы получаем
 		от пользователей приложения (monerujo: Monero Wallet).
-        </p>
+		</p>
         <p>Используя приложение, вы соглашаетесь на сбор и использование
 		информации в соответствии с данной политикой.
         </p>
@@ -29,12 +29,10 @@
 		с целью обработки транзакций  и её передачи в сеть Monero в зашифрованной форме.
         </p>
         <p>Приложение не собирает каких-либо других личных данных.</p>
-        <p>Если вы используете функцию обмена USD/EUR, Monerujo осуществляет обмен 
-		в соответствии с курсом обмена, получаемым через API с ресурса kraken.com.
-        Политика конфиденциальности этого ресурса подробно изложена
-		на вебсайте https://www.kraken.com/legal/privacy, где описан процесс сбора данных,
-		содержащихся в ваших запросах (в частности, в разделе «Информация,
-		сбор которой происходит автоматически»).</p>
+        <p>Если вы используете функцию обмена(необязательно), monerujo получает обменный
+		курс через публичный API coinmarketcap.com.
+        Перейдите по адресу https://coinmarketcap.com/privacy для получения подробной
+		информации о том, как собираются ваши персональные данные в запросах.</p>
         <p>Если вы используете приложение для оплаты по адресам BTC,
 		вы будете использовать сервис XMR.TO. Их политика конфиденциальности подробно
 		изложена на вебсайте https://xmr.to/. Monerujo отправляет им адрес
