--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -2,13 +2,13 @@
 <resources>
     <string name="help_create_new"><![CDATA[
         <h1>Создать кошелёк — Новый</h1>
-        <p>Если вам нужен новый адрес Monero</p>
+        <p>Если вам нужен новый адрес Monero!</p>
         <p>Введите уникальное имя и пароль кошелька.
         Пароль используется для защиты данных вашего кошелька на устройстве.
 		Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.</p>
         <h2>Запишите вашу мнемоническую фразу!</h2>
         <p>Следующий экран будет содержать вашу \"Мнемоническую фразу\", состоящую из 25 слов.
-        Это единственные данные, которые необходимые для восстановления вашего кошелька в
+        Это единственные данные, которые необходимы для восстановления вашего кошелька в
 		последней точке и для получения доступа к вашим средствам.
         Поддержание безопасности и конфиденциальности очень важно, так как это
 		гарантирует, что никто не сможет получить доступ к вашим средствам!</p>
@@ -56,23 +56,23 @@
     <string name="help_details"><![CDATA[
         <h1>Реквизиты кошелька</h1>
         <h2>Публичный адрес</h2>
-        Ваш публичный адрес подобен номеру вашего банковского счёта, и вы не должны делиться им с кем бы то ни было,
-		чтобы не потерять свои Monero. Monero будут слать на ваш кошелёк, используя именно этот адрес.
+        Ваш публичный адрес подобен номеру вашего банковского счёта, вы можете делиться им с кем бы то ни было,
+		не боясь потерять свои Monero. Monero будут отправлять на ваш кошелёк, используя именно этот адрес.
         <h2>Мнемоническая фраза</h2>
-        Это единственные данные, которые необходимые для восстановления вашего кошелька в последней
-		точке и для получения доступа к вашим средствам. Поддержание безопасности и конфиденциальности очень важно,
+        Это единственные данные, которые необходимы для восстановления вашего кошелька в
+		последующем и для получения доступа к вашим средствам. Поддержание безопасности и конфиденциальности очень важно,
 		так как это гарантирует, что <em>никто</em> не сможет получить доступ к вашим средствам!
 		Если вы не записали эту фразу и не храните её где-нибудь в безопасном месте, сделайте это!
         <h2>Файлы восстановления пароля кошелька</h2>
         Следует убедиться в том, что вы записали пароль. Если вы вернётесь к заводским настройкам вашего
-		устройства или деинсталлируете приложение, вам понадобится восстановить доступ к вашему кошельку.<br/>
+		устройства или деинсталлируете приложение, он вам понадобится для восстановления доступа к вашему кошельку.<br/>
         <h3>CrAzYpass</h3>
-        IЕсли вы видите пароль, который состоит из 52 буквенно-цифровых символов, разбитых на
+        Если вы видите пароль, который состоит из 52 буквенно-цифровых символов, разбитых на
 		четыре группы — поздравляем! Файлы вашего кошелька защищены 256-битным ключом, который генерируется
 		с использованием функций безопасности вашего устройства и приложения на основе выбранной вами
 		фразы-пароля (при создании или при изменении). Этот ключ взломать крайне сложно!<br/>
-        Данный элемент крайне важен для недавно созданных кошельков.
-        <h3>Унаследованный пароль</h3>
+        Данный элемент обязателен для недавно созданных кошельков.
+        <h3>Устаревший пароль</h3>
         Если вы видите здесь вашу фразу-пароль, это означает, что файлы вашего кошелька защищены не так надёжно,
 		как при использовании CrAzYpass. Чтобы исправить положение, необходимо просто выбрать в меню \"Изменить пароль\".
 		После того, как новая фраза-пароль будет введена (возможно, та же, что и была до этого),
@@ -93,7 +93,7 @@
     ]]></string>
 
     <string name="help_list"><![CDATA[
-        <h1>Список кошелька</h1>
+        <h1>Перечень терминов</h1>
         <h2>Узел</h2>
         <p>Для связи с сетью Monero без загрузки и сохранения копии всего блокчейна Monerujo использует
 		удалённый узел. Список популярных удалённых узлов  и информацию о том, как запустить собственный
@@ -108,7 +108,7 @@
         <p>Чтобы открыть кошелёк, необходимо выбрать его, а чтобы создать новый, следует
 		использовать \"+\". Или же можно выбрать одну из указанных ниже операций.</p>
         <h3>Подробная информация</h3>
-        <p>Показать подробную информацию по кошельку, мнемонической фразе и приложению, ключам.</p>
+        <p>Показать подробную информацию по кошельку, мнемонической фразе, ключам.</p>
         <h3>Получить</h3>
         <p>Создать QR-код для получения Monero.</p>
         <h3>Переименовать</h3>
@@ -117,7 +117,7 @@
         <p>Создать копию кошелька в папке <tt>backups</tt> внутри Monerujo, переписав предыдущие копии.</p>
         <h3>Архивировать</h3>
         <p>Создать резервную копию и после этого удалить кошелёк. Копия остаётся в папке <tt>backups</tt>.
-		Если необходимости в резервных копиях отсутствует, следует удалить их, используя файловый
+		Если необходимость в резервных копиях отсутствует, следует удалить их, используя файловый
 		менеджер или приложение для безопасного удаления файлов.</p>
     ]]></string>
 
@@ -126,44 +126,44 @@
         <h2>Сканирование</h2>
         Поскольку Monero ориентирована на подержание анонимности, всякий раз, когда вы открываете кошелёк
 		Monerujo, нам приходится сканировать блокчейн, чтобы посмотреть, были ли отправлены на ваш кошелёк
-		новые Monero. Информация сохраняется только на вашем телефоне, привязанном к вашему кошельку. 
+		новые Monero. Информация сохраняется только на вашем телефоне, привязанном к вашему кошельку.
 		Иногда это может занять какое-то время, так как вы не синхронизировались в течение долгого периода.
         <h2>Баланс</h2>
         <p><b>Помогите! Баланс моего кошелька куда-то исчез или не подтверждён!</b><br/>
         Не паникуйте! Если вы отправляете средства с вашего кошелька, ваш баланс временно остаётся
-		неподтверждённым. Это происходит в результате процесса обмена Monero в блокчейне и принципов
-		работы этого процесса. Подробности обмена можно узнать по ссылке:
+		неподтверждённым. Это происходит в результате процесса обмена Monero в блокчейне и работы механизма
+    сдачи. Подробности обмена можно узнать по ссылке:
 		https://getmonero.org/resources/moneropedia/change.html
         <h2>Список транзакций</h2>
-        <p>Список транзакций, проведённых с использованием кошелька. В кошельках просмотра можно увидеть
+        <p>Список транзакций, проведённых с использованием этого кошелька. В кошельках просмотра можно увидеть
 		только входящие транзакции.</p>
     ]]></string>
 
     <string name="help_tx_details"><![CDATA[
-        <h1>Подробная информация по транзакциям</h1>
+        <h1>Детали транзакции</h1>
         <h2>Адрес назначения</h2>
-        Это публичный адрес кошелька, на который вы отправляете Monero в соответствии с идентификатором оплаты
+        Это публичный адрес кошелька, на который вы отправляете Monero
         <h2>PaymentID</h2>
-        Вы можете использовать Payment ID для идентификации причины, по которой Monero передаётся одной
-		стороной другой стороне. Это опциональная и конфиденциальная операция. Например, она позволяет
+        Вы можете использовать Payment ID для идентификации причины, по которой Monero передаётся мужду
+        двумя сторонами. Это опциональная и конфиденциальная операция. Например, она позволяет
 		коммерсантам сверить вашу транзакцию с товаром, который был приобретён вами.
         <h2>TX ID</h2>
         Это идентификатор вашей транзакции (Transaction ID). Вы можете использовать его для идентификации
-		вашей скрытой транзакции через эксплорер блокчейна Monero, например, через этот:
+		вашей транзакции через просмотр блокчейна Monero, например, через этот:
         <a href="https://xmrchain.net/">https://xmrchain.net/</a>
         <h2>TX KEY (Ключ транзакции)</h2>
         Это ваш приватный ключ транзакции. Его следует хранить в безопасном месте, так как с его помощью
-		третья сторона может идентифицировать вашу подпись в кольце, что сделает транзакцию прозрачной.
+		третья сторона может идентифицировать из кольца вашу подпись, что сделает транзакцию прозрачной.
         <h2>Блок</h2>
-        Блок, в который была включена ваша транзакция.
+        Номер блока, в который была включена ваша транзакция.
     ]]></string>
 
     <string name="help_send"><![CDATA[
         <h1>Отправка</h1>
         <h2>Адрес получателя</h2>
-        <p>TЭто публичный адрес кошелька, на который вы отправляете Monero. Вы можете скопировать его
+        <p>Это публичный адрес кошелька, на который вы отправляете Monero. Вы можете скопировать его
 		из буфера, отсканировать QR-код или ввести вручную. Следует трижды проверить правильность
-		этого адреса, чтобы не отправить монеты не тому пользователю.</p>
+		этого адреса, чтобы не отправить монеты на ошибочный адрес.</p>
         <p>Помимо XMR служба XMR.TO позволяет отправлять BTC (подробности ищите на https://xmr.to).
 		См. раздел по отправке BTC ниже.</p>
         <h2>Идентификатор оплаты (Payment ID)</h2>
@@ -176,21 +176,21 @@
 		увеличивает количество подписантов в кольцевой подписи, что, теоретически, повышает
 		\"правдоподобное отрицание\". Тем не менее, больший размер кольца также выделяет вашу
 		транзакцию в блокчейне.</p>
-        <h2>Приоритетность</h2>
-        <p>Эта настройка определяет скорость, с которой ваша транзакция будет включена в блокчейн. 
+        <h2>Приоритет</h2>
+        <p>Эта настройка определяет скорость, с которой ваша транзакция будет включена в блокчейн.
 		Более высокий приоритет непременно будет означать более высокую комиссию, и наоборот в случае
 		с низким приоритетом. Следует отметить, что в случае назначения транзакции низкого приоритета,
 		могут пройти часы, прежде чем она будет включена в блокчейн. По умолчанию устанавливается
 		\"Среднее\" значение приоритета.</p>
         <h1>Отправка BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO является сторонней службой, которая помогает осуществлять обмен Monero на Bitcoin.
+        <p>XMR.TO является сторонним сервисом, который помогает осуществлять обмен Monero на Bitcoin.
 		мы используем API службы XMR.TO для включения платежей с использованием Bitcoin в Monerujo.
 		Пожалуйста, посетите https://xmr.to, и решите, хотите ли вы использовать эту возможность.
 		Команда Monerujo не связана с XMR.TO и не может помочь вам в работе с этой службой.</p>
         <h2>Курс обмена XMR.TO<h2>
         <p>На экране указания суммы \"Сумма\" отображаются текущие параметры службы XMR.TO.
-		Здесь также отображается обменный курс и верхний и нижний пределы BTC. Необходимо отметить,
+		Здесь также отображается обменный курс, верхние и нижние пределы BTC. Необходимо отметить,
 		что на данном этапе курс не гарантируется. Вы также сможете увидеть сумму, вплоть до которой
 		транзакция BTC будет произведена немедленно без ожидания подтверждения со стороны XMR
 		(подробности описаны в XMR.TO FAQ). Помимо этого, XMR.TO не требует выплаты какой-либо
@@ -213,13 +213,13 @@
     <string name="help_xmrto"><![CDATA[
         <h1>Отправка BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO является сторонней службой, которая помогает осуществлять обмен Monero на Bitcoin.
-		мы используем API службы XMR.TO для включения платежей с использованием Bitcoin в Monerujo.
+        <p>XMR.TO является сторонним сервисом, который помогает осуществлять обмен Monero на Bitcoin.
+		мы используем API службы XMR.TO для интеграции платежей с использованием Bitcoin в Monerujo.
 		Пожалуйста, посетите https://xmr.to, и решите, хотите ли вы использовать эту возможность.
 		Команда Monerujo не связана с XMR.TO и не может помочь вам в работе с этой службой.</p>
         <h2>Курс обмена XMR.TO<h2>
         <p>На экране указания суммы \"Сумма\" отображаются текущие параметры службы XMR.TO.
-		Здесь также отображается обменный курс и верхний и нижний пределы BTC. Необходимо отметить,
+		Здесь также отображается обменный курс, верхние и нижние пределы BTC. Необходимо отметить,
 		что на данном этапе курс не гарантируется. Вы также сможете увидеть сумму, вплоть до которой
 		транзакция BTC будет произведена немедленно без ожидания подтверждения со стороны XMR
 		(подробности описаны в XMR.TO FAQ). Помимо этого, XMR.TO не требует выплаты какой-либо
