--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -24,11 +24,14 @@
             android:indeterminate="true"
             android:visibility="gone" />
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/llAddress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <TextView
+                android:id="@+id/tvAddressLabel"
                 style="@style/MoneroLabel.Heading"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -39,20 +42,44 @@
                 android:id="@+id/bCopyAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="8dp"
                 android:background="?android:selectableItemBackground"
                 android:clickable="false"
                 android:src="@drawable/ic_content_nocopy_black_24dp" />
-        </FrameLayout>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvAddress"
-            style="@style/MoneroText.Medium"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            tools:text="9wZnnNctRc7RaLya1rxykH21dUwfQpNGmVLjAvkvqe7nKT2Mw848AJNGMunW5xjoSZ5vCCU3uDnUoVqSSHxzRtQBE3f6crx" />
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+            <TextView
+                android:id="@+id/tvAddress"
+                style="@style/MoneroText.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="10"
+                android:textAlignment="center"
+                tools:text="9wZnnNctRc7RaLya1rxykH21dUwfQpNGmVLjAvkvqe7nKT2Mw848AJNGMunW5xjoSZ5vCCU3uDnUoVqSSHxzRtQBE3f6crx" />
+
+            <Button
+                android:id="@+id/bSubaddress"
+                style="@style/MoneroText.Button.Small"
+                android:layout_width="56dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_weight="0"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:drawableTop="@drawable/ic_settings_orange_24dp"
+                android:text="@string/send_generate_paymentid_hint"
+                android:textColor="@color/moneroGray"
+                android:visibility="visible" />
+
+        </LinearLayout>
 
         <com.m2049r.aeonwallet.widget.ExchangeView
             android:id="@+id/evAmount"
@@ -96,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0"
-                android:background="?android:selectableItemBackground"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:drawableTop="@drawable/ic_settings_orange_24dp"
                 android:text="@string/send_generate_paymentid_hint"
                 android:textColor="@color/moneroGray"
@@ -122,10 +149,10 @@
                 android:visibility="invisible" />
 
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_margin="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_margin="16dp"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 card_view:cardCornerRadius="2dp"
