--- a/app/src/main/res/layout/fragment_send_amount.xml
+++ b/app/src/main/res/layout/fragment_send_amount.xml
@@ -1,16 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvFunds"
-        style="@style/MoneroText.Funds"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:gravity="center" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvFunds"
+            style="@style/MoneroText.Funds"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/ibSweep"
+            android:gravity="center"
+            tools:text="Balance: 70.198276354123 XMR" />
+
+        <ImageButton
+            android:id="@+id/ibSweep"
+            style="@style/MoneroLabel.NumPad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:paddingEnd="12dp"
+            android:paddingStart="12dp"
+            android:src="@drawable/ic_all_inclusive_24dp"
+            android:visibility="visible" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/llAmount"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="visible">
 
     <com.m2049r.aeonwallet.widget.ExchangeTextView
         android:id="@+id/evAmount"
@@ -27,4 +55,31 @@
         android:background="@color/white"
         android:gravity="center" />
 
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlSweep"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/ivSweep"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/tvSweep"
+            android:layout_alignParentTop="true"
+            android:padding="16dp"
+            android:src="@drawable/ic_all_inclusive_24dp" />
+
+        <TextView
+            android:id="@+id/tvSweep"
+            style="@style/MoneroLabel.Heading.Donation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:text="@string/send_sweepall" />
+    </RelativeLayout>
 </LinearLayout>
