--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,6 +52,10 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="MoneroLabel.Caps.White">
+        <item name="android:textColor">@color/moneroWhite</item>
+    </style>
+
     <style name="MoneroLabel.Caps.Black">
         <item name="android:textColor">@color/moneroBlack</item>
     </style>
@@ -195,6 +199,9 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="MoneroText.Large">
+        <item name="android:textSize">24sp</item>
+    </style>
 
     <style name="MoneroText.Success">
         <item name="android:textSize">18sp</item>
