--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -10,21 +10,27 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_license_info"
+        android:id="@+id/action_language"
         android:orderInCategory="200"
+        android:title="@string/menu_language"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_license_info"
+        android:orderInCategory="300"
         android:title="@string/menu_about"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_privacy_policy"
-        android:orderInCategory="300"
+        android:orderInCategory="400"
         android:title="@string/menu_privacy"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_help_list"
         android:icon="@drawable/ic_help_white_24dp"
-        android:orderInCategory="400"
+        android:orderInCategory="500"
         android:title="@string/menu_help"
         app:showAsAction="ifRoom" />
 
