--- a/app/src/main/res/anim/fab_open.xml
+++ b/app/src/main/res/anim/fab_open.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillAfter="true">
+    android:fillAfter="false">
     <scale
         android:duration="300"
         android:fromXScale="0.0"
