--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -51,10 +51,13 @@
             android:textAlignment="center"
             tools:text="49RBjxQ2zgf7t17w7So9ngcEY9obKzsrr6Dsah24MNSMiMBEeiYPP5CCTBq4GpZcEYN5Zf3upsLiwd5PezePE1i4Tf3rryY" />
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/llMnemonic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/header_top">
+            android:layout_marginTop="@dimen/header_top"
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 style="@style/MoneroLabel.Heading"
@@ -62,17 +65,17 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:text="@string/generate_mnemonic_label" />
-        </FrameLayout>
 
-        <TextView
-            android:id="@+id/tvWalletMnemonic"
-            style="@style/MoneroText.Monospace.Mnemonic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/data_top"
-            android:background="@drawable/backgound_seed"
-            android:textAlignment="center"
-            tools:text="tucks slackens vehicle doctor oaks aloof balding knife rays wise haggled cuisine navy ladder suitcase dusted last thorn pixels karate ticket nibs violin zapped slackens" />
+            <TextView
+                android:id="@+id/tvWalletMnemonic"
+                style="@style/MoneroText.Monospace.Mnemonic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/data_top"
+                android:background="@drawable/backgound_seed"
+                android:textAlignment="center"
+                tools:text="tucks slackens vehicle doctor oaks aloof balding knife rays wise haggled cuisine navy ladder suitcase dusted last thorn pixels karate ticket nibs violin zapped slackens" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llPassword"
@@ -126,57 +129,73 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:layout_marginTop="@dimen/section_top"
+            android:layout_marginTop="@dimen/data_top"
             android:orientation="vertical"
             android:visibility="gone">
 
-            <FrameLayout
+            <LinearLayout
+                android:id="@+id/llViewKey"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/header_top"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        style="@style/MoneroLabel.Heading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:text="@string/generate_viewkey_label" />
+
+                    <ImageButton
+                        android:id="@+id/bCopyViewKey"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="80dp"
+                        android:background="?android:selectableItemBackground"
+                        android:src="@drawable/ic_content_copy_black_24dp" />
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/tvWalletViewKey"
+                    style="@style/MoneroText.Monospace"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/data_top"
+                    android:textAlignment="center"
+                    tools:text="e4aba454d78799dbd8d576bf70e7f15a06e91f1ecfd404053f91519a48df2a0e" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llSpendKey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/header_top"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     style="@style/MoneroLabel.Heading"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:text="@string/generate_viewkey_label" />
+                    android:text="@string/generate_spendkey_label" />
 
-                <ImageButton
-                    android:id="@+id/bCopyViewKey"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tvWalletSpendKey"
+                    style="@style/MoneroText.Monospace"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="80dp"
-                    android:background="?android:selectableItemBackground"
-                    android:src="@drawable/ic_content_copy_black_24dp" />
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/tvWalletViewKey"
-                style="@style/MoneroText.Monospace"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/data_top"
-                android:textAlignment="center"
-                tools:text="e4aba454d78799dbd8d576bf70e7f15a06e91f1ecfd404053f91519a48df2a0e" />
-
-            <TextView
-                style="@style/MoneroLabel.Heading"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/header_top"
-                android:text="@string/generate_spendkey_label" />
-
-            <TextView
-                android:id="@+id/tvWalletSpendKey"
-                style="@style/MoneroText.Monospace"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/data_top"
-                android:textAlignment="center"
-                tools:text="4925a6254d2dff71df53f13b8334f9ceda6cdd5821aa895f7de1d2640500740d" />
-
+                    android:layout_marginTop="@dimen/data_top"
+                    android:textAlignment="center"
+                    tools:text="2bb6afd03f1a4b91e619236b9d342aeb6d232fa50e5b9b91a00db26d1cafaa08" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
