--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -22,9 +22,8 @@
         <p>請輸入不得重複的錢包名稱與錢包密碼。
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
         <p>在欄位\"種子碼\"中輸入你的25字種子碼。<p>
-        <p>若你知道你的第一筆交易是發生在哪個區塊高度的話，請在欄位\"回復高度\"中
-        輸入數值 - 若此欄留空則將會掃描<em>整個</em>區塊鏈以尋找屬於你錢包的交易與
-        餘額，將會花費<em>較長</em>的時間。</p>
+        <p>請在欄位\"回復高度\"輸入這個地址第一筆交易發生的區塊高度。你也可以依照 YYYY-MM-DD
+        格式輸入日期。如果你不是很確定，可以輸入這個錢包地址第一次使用<em>之前</em>的區塊高度或日期。</p>
     ]]></string>
 
     <string name="help_create_keys"><![CDATA[
@@ -33,9 +32,8 @@
         <p>請輸入不得重複的錢包名稱與錢包密碼。
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
         <p>在欄位\"公開地址\"中輸入你的Monero地址並填妥\"查看金鑰\"與\"花費金鑰\"。</p>
-        <p>若你知道你的第一筆交易是發生在哪個區塊高度的話，請在欄位\"回復高度\"中
-        輸入數值 - 若此欄留空則將會掃描<em>整個</em>區塊鏈以尋找屬於你錢包的交易與
-        餘額，將會花費<em>較長</em>的時間。</p>
+        <p>請在欄位\"回復高度\"輸入這個地址第一筆交易發生的區塊高度。你也可以依照 YYYY-MM-DD
+        格式輸入日期。如果你不是很確定，可以輸入這個錢包地址第一次使用<em>之前</em>的區塊高度或日期。</p>
     ]]></string>
 
     <string name="help_create_view"><![CDATA[
@@ -44,9 +42,8 @@
         <p>請輸入不得重複的錢包名稱與錢包密碼。
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
         <p>在欄位\"公開地址\"中輸入你的Monero地址並填妥\"查看金鑰\"。</p>
-        <p>若你知道你的第一筆交易是發生在哪個區塊高度的話，請在欄位\"回復高度\"中
-        輸入數值 - 若此欄留空則將會掃描<em>整個</em>區塊鏈以尋找屬於你錢包的交易與
-        餘額，將會花費<em>較長</em>的時間。</p>
+        <p>請在欄位\"回復高度\"輸入這個地址第一筆交易發生的區塊高度。你也可以依照 YYYY-MM-DD
+        格式輸入日期。如果你不是很確定，可以輸入這個錢包地址第一次使用<em>之前</em>的區塊高度或日期。</p>
     ]]></string>
 
     <string name="help_details"><![CDATA[
